# bevy-jam-7

./: Cargo.toml  README.md
docs/: Design.md
src/: audio.rs  camera.rs  fonts.rs  input.rs  main.rs  pause.rs  physics.rs  player.rs  textures.rs
src/animation/: events.rs  mod.rs  plugin.rs  sprite_animation.rs  sprite_facing.rs
src/game/: mod.rs  plugin.rs
src/game/player/: actions.rs  input.rs  mod.rs  plugin.rs
src/ui/: mod.rs  navigation.rs
