[package]
name = "bevy-jam-7"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app",
    "std",
    "bevy_gilrs",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgl2",
    "x11",
    "wayland",
    "sysinfo_plugin",
    "2d_bevy_render",
    "ui_bevy_render",
] }
bevy_kira_audio = "0.25.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"


[lints.clippy]
type_complexity = "allow"
